cluster/apps/default/evcc/middleware.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: evcc-auth
  namespace: default
spec:
  basicAuth:
    secret: evcc
